--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -4,6 +4,8 @@
 
   <body>
     {% include header.html %}
+    <span class="post-title"><h1>{{ page.title }}</h1></span>
+    <span class="post-metadata"><p>(投稿日時: {{ page.date }} カテゴリ: {{ page.categories }})<p></span>
     
     {{ content }}
 
