--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,5 +3,9 @@
 <head>
   <meta charset="UFT-8">
   <link rel="stylesheet" type="txt/css" href="main.css">
+  {% if page.title %}
+  <title>{{ page.title  }} - {{ site.name }}</title>
+  {% else %}
   <title>{{ site.name }}</title>
+  {% endif %}
 </head>
