--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <!-- HTML Head -->
 
 <head>
-  <meta charset="UFT-8">
+  <meta charset="UTF-8">
   <link rel="stylesheet" type="txt/css" href="main.css">
   {% if page.title %}
   <title>{{ page.title  }} - {{ site.name }}</title>
