--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -5,7 +5,7 @@
   <body>
     {% include header.html %}
     {% if page.title %}
-    <span class="blogpaginator-title"><h1>{{ page.title }}</h1></span>
+    <span class="page_title"><h1>{{ page.title }}</h1></span>
     {% endif %}
     
     {{ content }}
