Add css. Update includes and blog/index.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <!-- Page Header -->
 
-<span style="font-size: 42px">{{ site.name }}</span>
-<hr/>
+<span class="site_name">{{ site.name }}</span>
+<hr />
