--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
 <!-- HTML Head -->
 
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" type="txt/css" href="main.css">
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
   {% if page.title %}
   <title>{{ page.title  }} - {{ site.name }}</title>
   {% else %}
