Update css/main.scss. Fixed _includes/head.html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" type="text/css" href="css/main.css" />
+  <link rel="stylesheet" type="text/css" href="/css/main.css" />
   {% if page.title %}
   <title>{{ page.title  }} - {{ site.name }}</title>
   {% else %}
