Update CSS and header.html. Add a test post. Fix posts.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <!-- Page Header -->
 
-<span class="site_name">{{ site.name }}</span>
+<a href="/" style="text-decoration: none"><span class="site_name">{{ site.name }}</span></a>
 <hr />
