--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,8 +6,8 @@ html {
 
 // Headings
 h1, h2, h3 {
-    font-weight: bold;
     font-family: Arial, Helvertica, sans-serif;
+    //font-family: "Times New Roman", Times, serif;
     padding: 1rem 0px 1rem 0.5rem;
 }
 h1 {
@@ -23,7 +23,7 @@ h3 {
 // Paragraphs
 p {
     font-size: 1.2rem;
-    font-family: "Times New Roman", Times, serif;
+    font-family: Arial, Helvertica, sans-serif;
     line-height: 1.6;
     padding: 1.2rem 0px 1.2rem 4rem;
 }
@@ -47,4 +47,9 @@ small {
 }
 big {
     font-size: large;
+}
+
+// Images
+img {
+    float: none;
 }
