フィードの再設定とそれに伴うテーマの更新

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,8 @@
 <!-- Page Footer -->
 
 <hr />
+<div class="contact_info">
+  <a href="/feed.xml">フィードはコチラ</a>
+</div>
+<br />
 <span class="ip_info">{{ site.ip_info }}</span>
