about更新、GitHubリンク追加

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
 <hr />
 <div class="contact_info">
   <a href="/feed.xml">フィードはコチラ</a>
+  <a href="https://github.com/H-Teramura">GitHub</a>
 </div>
 <br />
 <span class="ip_info">{{ site.ip_info }}</span>
