--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -74,3 +74,9 @@ big {
 img {
     float: none;
 }
+
+// Quotes
+blockquote {
+	margin: 1.2rem 0px 1.2rem 4rem;
+	border-left: 5px solid #AAAAAA;
+}
